# wuwa-basesdk

./: LICENSE  README.md  wuwa-basesdk.sln
CppSDK/: CMakeLists.txt  NameCollisions.inl  SDK.hpp  UnrealContainers.hpp  UtfN.hpp
CppSDK/SDK/: ABPC_Seq_Body_V2_classes.hpp  ABPC_Seq_Body_V2_functions.cpp  ABPC_Seq_Body_V2_parameters.hpp  ABPC_Seq_Interface_classes.hpp  ABPC_Seq_Interface_functions.cpp  ABPC_Seq_Interface_parameters.hpp  ABPC_Seq_MascotInterface_classes.hpp  ABPC_Seq_MascotInterface_functions.cpp  ABPC_Seq_MascotInterface_parameters.hpp  ABPI_Seq_LevelB_classes.hpp  ABPI_Seq_LevelB_functions.cpp  ABP_BaseAnimal_classes.hpp  ABP_BaseAnimal_functions.cpp  ABP_BaseAnimal_parameters.hpp  ABP_BaseNPC_classes.hpp  ABP_BaseNPC_functions.cpp  ABP_BaseNPC_parameters.hpp  ABP_BaseRole_Seq_V2_classes.hpp  ABP_BaseRole_Seq_V2_functions.cpp  ABP_BaseRole_Seq_V2_parameters.hpp  ABP_BaseRole_classes.hpp  ABP_BaseRole_functions.cpp  ABP_BaseRole_parameters.hpp  ABP_Base_Sword_classes.hpp  ABP_Base_Sword_functions.cpp  ABP_Base_Sword_parameters.hpp  ABP_Bulante_classes.hpp  ABP_Chun_Special_classes.hpp  ABP_Chun_Special_functions.cpp  ABP_Chun_Special_parameters.hpp  ABP_Chun_classes.hpp  ABP_Common_NPC_Seq_classes.hpp  ABP_Common_NPC_Seq_functions.cpp  ABP_Common_NPC_Seq_parameters.hpp  ABP_DarkNanzhu_PC_classes.hpp  ABP_DarkNanzhu_PC_functions.cpp  ABP_DarkNanzhu_PC_parameters.hpp  ABP_DarkNanzhu_classes.hpp  ABP_Device_Common_classes.hpp  ABP_Device_Common_functions.cpp  (+3860 more)
Dumpspace/: ClassesInfo.json  EnumsInfo.json  FunctionsInfo.json  OffsetsInfo.json  StructsInfo.json
(+13 files in other folders)
