cmake_minimum_required(VERSION 3.15)

project(SDK)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64")

file(GLOB SOURCE_FILES
    "${CMAKE_CURRENT_SOURCE_DIR}/SDK/*.cpp"
)

include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}/SDK
    ${CMAKE_CURRENT_SOURCE_DIR}/
)

add_library(SDK STATIC ${SOURCE_FILES})
